feat: Update description on redirect notice page for clarity and tone

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     
     <div class="description">
       <h3>What is this?</h3>
-      <p>This site exists solely for my Custom GPT integration. It handles API requests and automated processes, not human visitors. For my actual work and portfolio, visit the link below.</p>
+      <p>So, you were curious about the link showing on my Custom GPT, huh? Yeah, I got you—or maybe you're a hacker, you sneaky bastard. This page is just here to fetch data for my Custom GPT, more like an API. Not really meant for human visitors, but hey, now you know! If you want to see my actual work and portfolio, check out the link below.</p>
     </div>
     
     <div class="links">
